--- a/templates/loglan/about.html
+++ b/templates/loglan/about.html
@@ -7,19 +7,19 @@
   {% endif %}
 </script>
 
-<div class="container-fluid yoga-background-tentang">
+<div class="container-fluid" style="padding-bottom:50px;">
   <div style="margin-top: 10px;">
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6 text-center yoga-judul-profil-pengembang">
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center yoga-judul-profil-pengembang">
         <p>Tentang Log-Lan</p>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
     </div>
 
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6 yoga-background-tentang-aplikasi">
+    <div class="row" style="padding-left:25px; padding-right:25px;">
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 yoga-background-tentang-aplikasi">
         <div style="padding: 25px; font-size: 20px; text-align: justify;">
           <p>
             Log-Lan adalah web aplikasi elearning bahasa pemrograman python, hasil pengembangan dari aplikasi sebelumnya, yaitu Be-Py.
@@ -29,43 +29,43 @@
           </p>
         </div>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
     </div>
   </div>
 
   <div style="margin-top: 30px;">
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6 text-center yoga-judul-profil-pengembang">
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center yoga-judul-profil-pengembang">
         <p>Tentang Pengambang</p>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
     </div>
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6 yoga-background-profil-pengembang">
-        <div class="col-md-4 text-center">
-          <div class="row">
-            <div style="margin:25px 0px;">
+    <div class="row" style="padding-left:25px; padding-right:25px;">
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
+      <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 yoga-background-profil-pengembang">
+        <div class="row" style="padding:10px;">
+          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="text-align:center">
+            <div style="margin:25px 0px;" >
               <img src="{% static 'image/yoga.png'%}" class="img-circle" width="150" height="150"/>
             </div>
+            <div>
+              <p>Muhammad Nizar Yoga Pratama</p>
+            </div>
           </div>
-          <div class="row text-center">
-            <p>Muhammad Nizar Yoga Pratama</p>
-          </div>
-        </div>
-        <div class="col-md-8 text-center">
-          <div style="margin-top:25px;">
-            <p><i class="fa fa-map-marker" aria-hidden="true"></i> Jakarta, Indonesia</p>
-            <p>S1, Teknik Informatika, Universitas Gunadarma</p>
-            <p>(2013 - 2017)</p>
-          </div>
-          <div style="font-style:oblique; margin-top:30px;">
-            <p>"Seorang anak desa yang ingin menjadi orang sukses di kota besar, Jakarta."</p>
+          <div class="col-lg-8 col-md-12 col-sm-12 col-xs-12" style="text-align:center">
+            <div style="margin-top:25px;">
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i> Jakarta, Indonesia</p>
+              <p>S1, Teknik Informatika, Universitas Gunadarma</p>
+              <p>(2013 - 2017)</p>
+            </div>
+            <div style="font-style:oblique; margin-top:30px;">
+              <p>"Seorang anak desa yang ingin menjadi orang sukses di kota besar, Jakarta."</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12"></div>
     </div>
   </div>
 
