--- a/templates/loglan/signup_succes.html
+++ b/templates/loglan/signup_succes.html
@@ -2,9 +2,15 @@
 
 {% block content %}
 
-<div class="container-fluid yoga-background-akun">
-  <div class="text-center yoga-text-akun">
-    <p class="text-center">Daftar akun Log-Lan Anda sudah berhasil, untuk aktifasi akun silahkan konfirmasi melalui pesan email Log-Lan di email yang Anda daftarkan.</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="margin-top:50px;">
+      <div class="text-center yoga-text-akun" style="padding:10px;">
+        <p>Daftar akun Log-Lan Anda sudah berhasil, untuk aktifasi akun silahkan konfirmasi melalui pesan email Log-Lan di email yang Anda daftarkan.</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 </div>
 
