--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,13 +1,15 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<div class="container yoga-background-akun">
+<div class="container-fluid" style="padding-top:25px; padding-bottom: 25px;">
   <div class="row">
-    <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
 
-    <div class="col-md-4 text-center">
-      <div style="margin-top:65px;">
-        <h3 style="color:white; margin-bottom:30px;">Ubah Kata Sandi</h3>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <div style="margin-top:50px;">
+        <div class="text-center">
+          <h4 class="yoga-keterangan-masuk">Ubah Kata Sandi</h4>
+        </div>
         <div class="panel panel-default yoga-panel">
           <div class="panel-body">
             {% if validlink %}
@@ -25,17 +27,15 @@
                 </div>
               </form>
             {% else %}
-              <p>
-                The password reset link was invalid, possibly because it has already been used.
-                Please request a new password reset.
-              </p>
+              <p style="color:white;"> Link atur ulang kata sandi tidak benar, mungkin karena sudah digunakan.
+                Silakan minta atur ulang kata sandi baru.</p>
             {% endif %}
           </div>
         </div>
       </div>
     </div>
 
-    <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 </div>
 
