--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,14 +1,18 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<div class="container-fluid yoga-background-akun">
-  <div class="text-center yoga-text-akun">
-    <p>
-      Kami telah mengirimkan email kepada Anda, yang berisi petunjuk untuk menyetel ulang kata sandi Anda.
-    </p>
-    <p>
-      Jika Anda tidak menerima email, pastikan Anda telah memasukkan alamat email yang Anda daftarkan dengan benar, dan periksa folder spam Anda.
-    </p>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="margin-top:50px;">
+      <div class="text-center yoga-text-akun" style="padding:10px;">
+        <p>Kami telah mengirimkan email kepada Anda, yang berisi petunjuk untuk menyetel ulang kata sandi Anda.</p>
+        <p>Jika Anda tidak menerima email, pastikan Anda telah memasukkan alamat email yang Anda daftarkan dengan benar, dan periksa folder spam Anda.</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 </div>
+
 {% endblock %}
