--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,12 +1,11 @@
 {% autoescape off %}
-To initiate the password reset process for your {{ user.get_username }} TestSite Account,
-click the link below:
+Untuk memulai proses pengaturan ulang kata sandi untuk {{user.get_username}} Akun LogLan Anda, klik tautan di bawah ini:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-If clicking the link above doesn't work, please copy and paste the URL in a new browser
-window instead.
+Jika mengklik tautan di atas tidak berhasil, silakan salin dan tempel URL di jendela browser baru.
 
-Sincerely,
-The TestSite Team
+
+Hormat Saya,
+Muhammad Nizar Yoga Pratama
 {% endautoescape %}
