--- a/templates/loglan/account_confirmed.html
+++ b/templates/loglan/account_confirmed.html
@@ -1,9 +1,17 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<div class="container-fluid yoga-background-akun">
-  <div class="text-center yoga-text-akun">
-    <p>Konfirmasi akun Log-Lan Anda sudah berhasil dan akun Anda sudah aktif, silahkah <a href="{% url 'loglan:login' %}">masuk</a> untuk mulai belajar.</p>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="margin-top:50px;">
+      <div class="text-center yoga-text-akun" style="padding:10px;">
+        <p>Konfirmasi akun Log-Lan Anda sudah berhasil dan akun Anda sudah aktif, silahkah <a href="{% url 'loglan:login' %}">masuk</a> untuk mulai belajar.</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 </div>
+
 {% endblock %}
