--- a/templates/loglan/course_part_detail.html
+++ b/templates/loglan/course_part_detail.html
@@ -76,36 +76,42 @@ function cek_jawaban() {
 
 </script>
 
-
-
-<div class="container-fluid yoga-minimal-tinggi-halaman-belajar">
+<div class="container-fluid">
 
   <div class="row yoga-background-biru-tua" id="yoga-row-pertama-course" >
-    <div class="col-md-6" id="yoga-jarak-menu-course">
-      <div class="col-md-4">
-        <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.number %}" class="btn btn-default" id="yoga-button-belajar"> Belajar</a>
-      </div>
-      <div class="col-md-4">
-        <a href="{% url 'loglan:course_part_list' course_slug=course_part.course.course_slug %}" class="btn btn-default" id="yoga-button-belajar"> Daftar Materi</a>
-      </div>
-      <div class="col-md-2"></div>
-      <div class="col-md-2"></div>
-    </div>
-    <div class="col-md-6 text-right yoga-poin-course-detail">
-      <div class="col-md-6"></div>
-      <div class="col-md-6">
-        <div class="col-md-6 text-center" id="yoga-jumlah-poin-course-user">
-          <h4 style="font-size:24px;"> {% user_course_point_per_level request.user course_part.course.id %} poin</h4>
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="padding:0px;">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="padding:5px;">
+          <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.number %}" class="btn btn-default" id="yoga-button-belajar"> Belajar</a>
         </div>
-        <div class="col-md-6">
-          <h4 style="font-size:21px;">+ {{course_part.course_point}} poin</h4>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="padding:5px;">
+          <a href="{% url 'loglan:course_part_list' course_slug=course_part.course.course_slug %}" class="btn btn-default" id="yoga-button-belajar"> Daftar Materi</a>
+        </div>
+        <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12"></div>
+        <div class="col-lg-2 col-md-12 col-sm-12 col-xs-12"></div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-right yoga-poin-course-detail" style="padding:0px;">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12"></div>
+        <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
+          <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center">
+              <div id="yoga-jumlah-poin-course-user" style="padding:5px">
+                <h4 style="font-size:24px;"> {% user_course_point_per_level request.user course_part.course.id %} poin</h4>
+              </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center" style="padding:5px;">
+              <h4 style="font-size:24px;">+ {{course_part.course_point}} poin</h4>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <div class="row yoga-background-biru-tua">
-    <div class="col-md-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
       <div class="progress" id="yoga-progres-course-detail">
         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{% user_course_progress_per_level request.user course_part.course.id %}%">
           {% user_course_progress_per_level request.user course_part.course.id %} %
@@ -115,17 +121,21 @@ function cek_jawaban() {
   </div>
 
   <div class="row" id="yoga-background-course">
-    <div class="col-md-6">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="padding-top:10px">
       <div class="yoga-tempat-materi">
         <h3><strong>{{ course_part.course_part_name|safe }}</strong></h3>
         {{ course_part.course_content|safe }}
         {{ course_part.course_example|safe }}
       </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12" style="padding-top:10px">
       <div id="yoga-panel-teks-editor">
-        <textarea cols="70" rows="7" id="yourcode"></textarea>
-        <button type="button" onclick="runit()" class="btn btn-default" id="yoga-button-jalankan">Jalankan</button>
+        <div>
+          <textarea style=" width:100%; min-height:150px;" id="yourcode"></textarea>
+        </div>
+        <div>
+          <button type="button" onclick="runit()" class="btn btn-default" id="yoga-button-jalankan">Jalankan</button>
+        </div>
       </div>
       <div class="yoga-output-program" id="output"></div>
       <div class="yoga-notifikasi-hasil-program text-center">
@@ -134,11 +144,11 @@ function cek_jawaban() {
     </div>
   </div>
 
-  <div class="row" id="yoga-panel-button-belajar">
-    <div class="col-md-4"></div>
-    <div class="col-md-4" id="yoga-margin-panel-button-selanjutnya-sebelumnya">
+  <div class="row" id="yoga-panel-button-belajar" style="padding-right:50px; padding-left: 50px;">
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding:0.5px;">
           <div class="text-left">
             {% if course_part.previous_part %}
               <a href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.previous_part.number%}">
@@ -147,7 +157,7 @@ function cek_jawaban() {
             {% endif %}
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding:0.5px;">
           <div class="text-right">
             {% if course_part.next_part %}
               <a id="button-next" href="{% url 'loglan:course_part_detail' course_slug=course_part.course.course_slug number_part_course=course_part.next_part.number%}" class="{% part_lock request.user course_part.next_part %}">
@@ -162,7 +172,7 @@ function cek_jawaban() {
         </div>
       </div>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"></div>
   </div>
 
 </div>
