--- a/templates/loglan/course_part_result.html
+++ b/templates/loglan/course_part_result.html
@@ -2,13 +2,13 @@
 
 {% load course %}
 {% block content %}
-<div class="container-fluid yoga-background-hasil-belajar text-center">
+<div class="container-fluid yoga-background-hasil-belajar text-center" style="padding-top:25px; padding-bottom:25px; padding-right:50px; padding-left: 50px;">
   <div class="yoga-text-selesai-materi">
     <p>Selamat Anda telah menyelesaikan materi pembelejaran bahasa pemrograman python level {{course.course_name}}</p>
   </div>
   <!-- <div class="yoga-hasil-jumlah-materi">
     <p>Jumlah materi yang Anda selesaikan</p>
-    
+
   </div> -->
 
   <!-- <div class="row">
@@ -25,20 +25,18 @@
   </div>
 
   <div class="row">
-    <div class="col-md-3"></div>
-    <div class="col-md-6">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
-        <div class="col-md-6 text-center">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center" style="padding:0.5px;">
           <a href="{% url 'loglan:course_part_list' course.course_slug %}" class="btn btn-default" id="yoga-button-belajar">Lihat Daftar Materi</a>
         </div>
-        <div class="col-md-6 text-center">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center" style="padding:0.5px;">
           <a href="{% url 'loglan:choose_level' %}" class="btn btn-default" id="yoga-button-belajar">Pilih Level Belajar</a>
         </div>
       </div>
-      <div class="col-md-1"></div>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 
 </div>
