--- a/templates/loglan/header_footer.html
+++ b/templates/loglan/header_footer.html
@@ -10,93 +10,129 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="{% static 'bootstrap/css/bootstrap.min.css'%}" rel="stylesheet" type="text/css">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <!-- W3 CSS -->
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
   <link href="{% static 'css/yoga-styles.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'codemirror/lib/codemirror.css' %}" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/skulpt.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/skulpt-stdlib.js' %}" type="text/javascript"></script>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+      width: 100%;
+    }
+
+    #container {
+      min-height: 100%;
+      background-color: #354551;
+    }
+
+    #main {
+      overflow: auto;
+      padding-bottom: 100px;
+    }
+
+    #footer {
+      position: relative;
+      clear: both;
+      background-color: #008580;
+      min-height: 100px;
+      margin-top: -100px;
+    }
+  </style>
 </head>
 
 <body>
-
-  <nav class="navbar navbar-default" id="yoga-navbar-atas">
-    <div class="container-fluid">
-
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#yoga-navbar-collapse" aria-expanded="false">
-          <span class="sr-only"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+<div id="container">
+    <div id="main">
+      <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#008580; !impotant">
         {% if user.is_authenticated %}
-        <a class="navbar-brand" href="{% url 'loglan:user_main_page' %}">
-          <img id="yoga-logo" src="{% static 'image/Logo3.png'%}" width="32"/>
-          <span id="yoga-title"> Log-Lan</span>
-        </a>
+          <a class="navbar-brand" href="{% url 'loglan:user_main_page' %}"><img src="{% static 'image/Logo3.png'%}" width="40">
+          <span class="navbar-text"><h2 style="color:white;"><strong>LogLan</strong></h2></span></a>
         {% else %}
-        <a class="navbar-brand" href="{% url 'loglan:home' %}">
-          <img id="yoga-logo" src="{% static 'image/Logo3.png'%}" width="32"/>
-          <span id="yoga-title"> Log-Lan</span>
-        </a>
+          <a class="navbar-brand" href="{% url 'loglan:home' %}"><img src="{% static 'image/Logo3.png'%}" width="40">
+          <span class="navbar-text"><h2 style="color:white;"><strong>LogLan</strong></h2></span></a>
         {% endif %}
-      </div>
 
-      {% if user.is_authenticated %}
-      <div class="collapse navbar-collapse" id="yoga-navbar-collapse">
-        <ul class="nav navbar-nav navbar-right" >
-          <li><a href="{% url 'loglan:user_main_page' %}" id="yoga-menu-navbar-kanan"> {{request.user.username}}</a></li>
-          <li><a href="{% url 'loglan:ranking' %}" id="yoga-menu-navbar-kanan"> Peringkat</a></li>
-          <li><a href="{% url 'loglan:help' %}" id="yoga-menu-navbar-kanan"> Bantuan</a></li>
-          <li><a href="/logout" id="yoga-menu-navbar-kanan"> Keluar</a></li>
-        </ul>
-      </div>
-      {% else %}
-      <div class="collapse navbar-collapse" id="yoga-navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="{% url 'loglan:login' %}" id="yoga-menu-navbar-kanan"> Masuk</a></li>
-          <li><a href="{% url 'loglan:signup' %}" id="yoga-menu-navbar-kanan"> Daftar</a></li>
-          <li><a href="{% url 'loglan:about' %}" id="yoga-menu-navbar-kanan"> Tentang</a></li>
-          <li><a href="{% url 'loglan:help' %}" id="yoga-menu-navbar-kanan"> Bantuan</a></li>
-        </ul>
-      </div>
-      {% endif %}
-    </div>
-  </nav>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"  style="border-color:white; !impotant">
+          <span class="navbar-toggler-icon" style="border-color: white; !impotant"></span>
+        </button>
 
-  {% block content %}
-
-  {% endblock %}
-
-  <footer class="footer">
-    <div class="container">
-      <div class="row yoga-footer-konten">
-
-        <div class="col-md-4 text-center">
-          <p>Log-Lan is a e-learning platform based Gamification</p>
-          <p>This e-learning is deployed for research purpose</p>
-          <p>Copyrights @2017 Log-Lan. All Rights Reserved</p>
+        <div class="collapse navbar-collapse" id="collapse_target">
+          <ul class="navbar-nav ml-auto">
+            {% if request.user.is_authenticated %}
+              <li class="nav-item" {% if section == "dashboard" %} class="selected"{% endif %}>
+                <a class="nav-link" href="{% url "loglan:user_main_page" %}"><h6 id="yoga-button-header">{{request.user.username}}</h6></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "loglan:ranking" %}"><h6 id="yoga-button-header">Peringkat</h6></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "loglan:help" %}"><h6 id="yoga-button-header">Bantuan</h6></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "loglan:logout" %}"><h6 id="yoga-button-header">Keluar</h6></a>
+              </li>
+            {% else %}
+              <li class="nav-item" {% if section == "dashboard" %} class="selected"{% endif %}>
+                <a class="nav-link" href="{% url "loglan:login" %}"><h6 id="yoga-button-header">Masuk</h6></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "loglan:signup" %}"><h6 id="yoga-button-header">Daftar</h6></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "loglan:about" %}"><h6 id="yoga-button-header">Tentang</h6></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url "loglan:help" %}"><h6 id="yoga-button-header">Bantuan</h6></a>
+              </li>
+            {% endif %}
+          </ul>
         </div>
+      </nav>
 
-        <div class="col-md-4 text-center">
+      {% block content %}
+
+      {% endblock %}
+
+    </div>
+  </div>
+
+  <footer id="footer" align="center">
+    <div class="container-fluid">
+      <div class="row" style="padding-top:5px;">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+          <p style="margin-top:12px; color:white">Log-Lan is a e-learning platform based Gamification<br>This e-learning is deployed for research purpose<br>Copyrights @2017 Log-Lan. All Rights Reserved</p>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" >
           <h4><strong>About Developer</strong></h4>
           <ul class="list-inline">
-            <li>
+            <li style="display: inline-block;">
               <a href="https://github.com/muhammadnizaryp/" class="yoga-a-gambar">
-                <i class="fa fa-github fa-2x"></i>
+                <i class="fa fa-github fa-2x" style="margin-right:5px"></i>
               </a>
             </li>
-            <li>
+            <li style="display: inline-block;">
               <a href="https://www.linkedin.com/in/muhammad-nizar-yoga-pratama-532924112/" class="yoga-a-gambar">
-                <i class="fa fa-linkedin-square fa-2x"></i>
+                <i class="fa fa-linkedin-square fa-2x" style="margin-left:5px"></i>
               </a>
             </li>
           </ul>
         </div>
-
-        <div class="col-md-4 text-center">
+        <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" >
           <h4><strong>Related Research</strong></h4>
           <ul class="list-inline">
             <li>
@@ -105,13 +141,13 @@
               </a>
             </li>
         </div>
-
       </div>
     </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
-  <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="{% static 'codemirror/lib/codemirror.js' %}" type="text/javascript"></script>
 
 </body>
