--- a/templates/loglan/home.html
+++ b/templates/loglan/home.html
@@ -9,102 +9,157 @@
   {% endif %}
 </script>
 
-<div class="container-fluid yoga-minimal-tinggi-halaman">
-  <div class="row" style="margin-top:-20px;">
-    <div id="yoga-panel-selamat-datang-biru-tua">
-      <div class="col-md-6">
-        <div class="col-md-4">
-          <img id="yoga-logo-selamat-datang" src="{% static 'image/Logo1.png'%}" width="256"/>
+<div class="container-fluid" style="padding:0px; margin:0px;">
+  <div class="row" id="yoga-panel-selamat-datang-biru-tua" style="padding:0px; margin:0px;">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="row" style="padding:50px; text-align:center;">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+          <img src="{% static 'image/Logo1.png'%}" width="200"/>
         </div>
-        <div class="col-md-8 text-left" id="yoga-col-selamat-datang">
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" style="text-align:left; margin: auto; padding-left: 106px; padding-top:20px;">
           <h1 id="yoga-teks-selamat-datang">Selamat Datang</h1>
           <h1 id="yoga-teks-loglan">{ Log-Lan }</h1>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-          <p id="yoga-teks-penjelasan-loglan" class="text-center">Log-Lan (Logarithm-Language) adalah sebuah e-learning bahasa pemrograman Python berbasis Gamification, menyediakan fitur level belajar, materi pemrograman interaktif, kuis pilihan ganda, tantangan <i>un-lock</i> materi dan kuis, poin user untuk meningkatkan rangking.</p>
-          <div class="text-center">
-            <a href="{% url 'loglan:login' %}"
-              <button class="btn btn-default" id="yoga-button-akun">Mulai Belajar</button>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-2"></div>
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="padding-right:100px; padding-left:100px; padding-top:35px; padding-bottom:46px; text-align:center; ">
+      <p id="yoga-teks-penjelasan-loglan" class="text-center">Log-Lan (Logarithm-Language) adalah sebuah e-learning bahasa pemrograman Python berbasis Gamification, menyediakan fitur level belajar, materi pemrograman interaktif, kuis pilihan ganda, tantangan <i>un-lock</i> materi dan kuis, poin user untuk meningkatkan rangking.</p>
+      <div class="text-center">
+        <a href="{% url 'loglan:login' %}"
+          <button class="btn btn-default" id="yoga-button-akun">Mulai Belajar</button>
+        </a>
       </div>
     </div>
+
   </div>
 
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4 text-center">
+  <div id="yoga-panel-selamat-datang-abu-abu">
+    <div class="row" style="padding-top:25px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
         <img id="yoga-logo-selamat-datang" src="{% static 'image/coding.png'%}" width="128"/>
       </div>
-      <div class="col-md-8 yoga-fitur">
+      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 yoga-fitur">
         <p>Materi belajar diberikan dalam bentuk teks tertulis, contoh program, dan user diwajibkan untuk menyelesaikan tantangan <i>coding program</i> di setiap
           materi yang diberikan, tantangan tersebut dapat diselesaikan pada <i>text editor</i> yang telah disediakan.</p>
       </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     </div>
-  </div>
 
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4 text-center">
+    <div class="row" style="margin-top:50px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <hr style="border-color:#00D3B5"></hr>
+      </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+    </div>
+
+    <div class="row" style="padding-top:25px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
         <img id="yoga-logo-selamat-datang" src="{% static 'image/questions.png'%}" width="128"/>
       </div>
-      <div class="col-md-8 yoga-fitur">
+      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 yoga-fitur">
         <p>Kuis diberikan dalam bentuk pilihan ganda. Kuis berfungsi untuk mengasah pemahaman user terhadap materi yang telah diberikan disetiap level pembelajaran.
         Kuis dapat dikerjakan jika user telah menyelesaikan semua materi belajar pada level terkait.</p>
       </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     </div>
-  </div>
 
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4 text-center">
+    <div class="row" style="margin-top:50px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <hr style="border-color:#00D3B5"></hr>
+      </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+    </div>
+
+    <div class="row" style="padding-top:25px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
         <img id="yoga-logo-selamat-datang" src="{% static 'image/unlock.png'%}" width="128"/>
       </div>
-      <div class="col-md-8 yoga-fitur">
+      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 yoga-fitur">
         <p>Lock-Unlock materi belajar dan kuis berfungsi untuk menambah tantangan dalam proses belajar.</p>
       </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     </div>
-  </div>
 
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4 text-center">
+    <div class="row" style="margin-top:50px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <hr style="border-color:#00D3B5"></hr>
+      </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+    </div>
+
+    <div class="row" style="padding-top:25px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
         <img id="yoga-logo-selamat-datang" src="{% static 'image/poins.png'%}" width="128"/>
       </div>
-      <div class="col-md-8 yoga-fitur">
+      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 yoga-fitur">
         <p>User dapat memperoleh poin dari setiap berhasil menyelesaikan koding program dan mengerjakan kuis</p>
       </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     </div>
-  </div>
 
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4 text-center">
+    <div class="row" style="margin-top:50px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <hr style="border-color:#00D3B5"></hr>
+      </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+    </div>
+
+    <div class="row" style="padding-top:25px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
         <img id="yoga-logo-selamat-datang" src="{% static 'image/ranking.png'%}" width="128"/>
       </div>
-      <div class="col-md-8 yoga-fitur">
+      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 yoga-fitur">
         <p>Hasil proses belajar user ditampilkan dalam bentuk Rangking, sehingga user mengetahui
         pada peringkat berapa proses belajar yang telah dilakukan. Rangking diambilkan dari total poin
         yang dikumpulkan user</p>
       </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     </div>
-  </div>
 
-  <div class="row">
-    <div id="yoga-panel-selamat-datang-abu-abu">
-      <div class="col-md-4 text-center">
+    <div class="row" style="margin-top:50px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <hr style="border-color:#00D3B5"></hr>
+      </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+    </div>
+
+    <div class="row" style="padding-top:25px; padding-bottom:25px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 text-center">
         <img id="yoga-logo-selamat-datang" src="{% static 'image/progress.png'%}" width="128"/>
       </div>
-      <div class="col-md-8 yoga-fitur">
+      <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+      <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 yoga-fitur">
         <p>Progres belajar user disajikan dalam bentuk presentase progres bar. Pada setiap level pembelajaran,
         user memiliki progres bar belajar masing-masing.</p>
       </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
     </div>
+
+    <div class="row" style="margin-top:50px;">
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+      <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <hr style="border-color:#00D3B5"></hr>
+      </div>
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+    </div>
+    
   </div>
 
 </div>
