--- a/templates/loglan/user_main_page.html
+++ b/templates/loglan/user_main_page.html
@@ -14,106 +14,94 @@ window.location = "{% url 'loglan:login' %}";
 {% endif %}
 </script>
 
-<div class="container-fluid yoga-minimal-tinggi-halaman">
-
-  <div class="col-md-6 col-sm-6 col-xs-12">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 yoga-panel-python-halaman-user">
-      <div class="row">
-        <div class="col-md-4">
-          <img src="{% static 'image/pythonlogo.png'%}" width="128"/>
-        </div>
-        <div class="col-md-8 text-left yoga-panel-mulai-belajar-abu-abu">
-          <h3 class="yoga-penjelasan-python">Python</h3>
-          <p>Anda akan belajar dalam level Basic dan Intermediete</p>
-        </div>
-      </div>
-      <div class="row" id="yoga-panel-penjelasan-putih">
-        <dd class="text-justify">  Python adalah bahasa pemrograman interpretatif multiguna, mudah dipelajari karena menerapkan
-          filosofi perancangan yang berfokus pada tingkat keterbacaan kode, dimana sintaksis kode sederhana dan memiliki dokumentasi yang lengkap.</dd>
-      </div>
-      <div class="row">
-        <form method="POST" action="#">
-          <div class="text-center">
-            <a href="{% url 'loglan:choose_level' %}" type="submit" name="course" class="btn btn-default" id="yoga-button-belajar">Mulai Belajar</a>
-          </div>
-        </form>
-      </div>
-    </div>
-    <div class="col-md-2"></div>
-  </div>
-
-  <div class="col-md-6 col-sm-6 col-xs-12 yoga-panel-profil-halaman-user">
-
-    <div class="row text-center yoga-panel-toska-profil-halaman-user">
-      <div class="row yoga-judul-profil-halaman-user">
-        <div class="col-md-4">
-          User
-        </div>
-        <div class="col-md-4">
-          Jumlah Poin
-        </div>
-        <div class="col-md-4">
-          Peringkat
-        </div>
-      </div>
-    </div>
-
-    <div class="row text-center yoga-panel-biru-profil-halaman-user">
-      <div class="row yoga-isi-profil-halaman-user">
-        <div class="col-md-4">
-          {{request.user.username}}
-        </div>
-        <div class="col-md-4">
-          {{request.user.user_profile.user_point_total}}
-        </div>
-        <div class="col-md-4">
-          {{ request.user.user_profile.user_ranking }}
-        </div>
-      </div>
-    </div>
-
-    </br>
-
-    {% for course_taken in course_taken %}
-    <div class="row yoga-panel-biru-progres-bar-halaman-user">
-      <div class="text-center yoga-judul-level-progres-bar">
-        {{course_taken.course.course_name}}
-      </div>
-      <div class="row yoga-panel-toska-progres-bar-halaman-user">
-        <div class="col-md-3 text-center yoga-isi-progres">
-          Materi
-        </div>
-        <div class="col-md-6">
-          <div class="progress yoga-progres-bar-halaman-user">
-            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{% user_course_progress_per_level request.user course_taken.course.id %}%">
-              {% user_course_progress_per_level request.user course_taken.course.id %} %
+<div class="container-fluid" style="padding-top:25px; padding-bottom: 25px; padding-right:50px; padding-left: 50px;">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+      <div class="row" style="padding: 0px 15px;">
+        <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 yoga-panel-python-halaman-user">
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+              <img src="{% static 'image/pythonlogo.png'%}" width="128"/>
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 text-left yoga-panel-mulai-belajar-abu-abu">
+              <h3 class="yoga-penjelasan-python">Python</h3>
+              <p>Anda akan belajar dalam level Basic dan Intermediete</p>
             </div>
           </div>
+          <div class="row" id="yoga-panel-penjelasan-putih">
+            <dd class="text-justify">  Python adalah bahasa pemrograman interpretatif multiguna, mudah dipelajari karena menerapkan
+              filosofi perancangan yang berfokus pada tingkat keterbacaan kode, dimana sintaksis kode sederhana dan memiliki dokumentasi yang lengkap.</dd>
+          </div>
+          <div class="row">
+            <a href="{% url 'loglan:choose_level' %}" class="btn btn-default" id="yoga-button-belajar">
+              Mulai Belajar
+            </a>
+          </div>
         </div>
-        <div class="col-md-3 yoga-isi-progres text-center">
-          {% user_course_point_per_level request.user course_taken.course.id %} poin
-        </div>
-      </div>
-
-      <div class="row yoga-panel-toska-progres-bar-halaman-user">
-        <div class="col-md-3  text-center yoga-isi-progres">
-          Kuis
-        </div>
-        <div class="col-md-6 text-center yoga-isi-progres">
-          <!-- {{ course_taken.user.quiz.quiz_taken.quiz_part_is_true.count }} -->
-        </div>
-        <div class="col-md-3 text-center yoga-isi-progres">
-          {% user_quiz_point_per_level request.user course_taken.course.quiz.id %} / {% user_quiz_point_should_be_achieved request.user course_taken.course.quiz.id %} poin
-        </div>
+        <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12"></div>,
       </div>
     </div>
 
-    </br>
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 yoga-panel-profil-halaman-user">
 
-    {% endfor %}
+      <div class="row text-center yoga-panel-toska-profil-halaman-user" style="padding: 0px 15px;">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding:0px;">
+          <div style="background-color: #46C9B6; color: #435560; padding:5px; font-weight:bold;">User</div>
+          <div style="  background-color: #435560; color: #46C9B6; padding:5px;">{{request.user.username}}</div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding:0px;">
+          <div style="background-color: #46C9B6; color: #435560; padding:5px; font-weight:bold;">Jumlah Poin</div>
+          <div style="  background-color: #435560; color: #46C9B6; padding:5px;">{{request.user.user_profile.user_point_total}}</div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding:0px;" >
+          <div style="background-color: #46C9B6; color: #435560; padding:5px; font-weight:bold;">Peringkat</div>
+          <div style="  background-color: #435560; color: #46C9B6; padding:5px;">{{ request.user.user_profile.user_ranking }}</div>
+        </div>
+      </div>
 
+      </br>
+
+      {% for course_taken in course_taken %}
+      <div class="yoga-panel-biru-progres-bar-halaman-user">
+        <div class="text-center yoga-judul-level-progres-bar">
+          {{course_taken.course.course_name}}
+        </div>
+
+        <div class="row yoga-panel-toska-progres-bar-halaman-user">
+          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center yoga-isi-progres">
+            Materi
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="progress">
+              <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:{% user_course_progress_per_level request.user course_taken.course.id %}%">
+                {% user_course_progress_per_level request.user course_taken.course.id %} %
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 yoga-isi-progres text-center">
+            {% user_course_point_per_level request.user course_taken.course.id %} poin
+          </div>
+        </div>
+
+        <div class="row yoga-panel-toska-progres-bar-halaman-user">
+          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12  text-center yoga-isi-progres">
+            Kuis
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 text-center yoga-isi-progres">
+            <!-- {{ course_taken.user.quiz.quiz_taken.quiz_part_is_true.count }} -->
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-center yoga-isi-progres">
+            {% user_quiz_point_per_level request.user course_taken.course.quiz.id %} / {% user_quiz_point_should_be_achieved request.user course_taken.course.quiz.id %} poin
+          </div>
+        </div>
+      </div>
+
+      </br>
+
+      {% endfor %}
+
+    </div>
   </div>
-
 </div>
 {% endblock %}
