--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,13 +7,13 @@
   {% endif %}
 </script>
 
-<div class="container yoga-background-akun">
+<div class="container-fluid" style="padding-top:25px; padding-bottom:25px;">
+  <div class="row">
 
-  <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
 
-  <div class="col-md-4 col-sm-4 col-xs-12">
-    <div style="margin-top:75px;">
-      <div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+      <div style="margin-top:50px;">
         <div class="text-center">
           <h4 class="yoga-keterangan-masuk">Masuk untuk mulai belajar</h4>
         </div>
@@ -23,7 +23,7 @@
               <div>
                 {% for field in form %}
                 <div style="margin-top: 10px; color:white;">
-                  {{ field.label_tag|escape }}
+                  {{ field.label_tag|escape }}{{ field.errors|escape }}
                   {{ field }}
                 </div>
                 {% endfor %}
@@ -34,28 +34,28 @@
             </form>
           </div>
         </div>
-        <div class="text-center">
-          <div class="col-md-6">
-            <a href="{% url 'loglan:signup' %}" class="yoga-keterangan-daftar-masuk">
-              <h4>Belum daftar?</h4>
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="{% url 'password_reset' %}" class="yoga-keterangan-daftar-masuk">
-              <h4>Lupa Kata Sandi?</h4>
-            </a>
-          </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-6">
+          <a href="{% url 'loglan:signup' %}" class="yoga-keterangan-daftar-masuk">
+            <h4>Belum daftar?</h4>
+          </a>
+        </div>
+        <div class="col-md-6">
+          <a href="{% url 'password_reset' %}" class="yoga-keterangan-daftar-masuk">
+            <h4>Lupa Kata Sandi?</h4>
+          </a>
         </div>
       </div>
       <div class="row">
         {% for error in form.non_field_errors %}
-        <h4 style="color:#CF000F;">{{ error|escape }}</h4>
+        <h4 style="color:#CF000F;">{{ error }}</h4>
         {% endfor %}
       </div>
     </div>
-  </div>
 
-  <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
+  </div>
 
 </div>
 {% endblock %}
