--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,11 +1,17 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<div class="container yoga-background-akun">
-  <div class="text-center yoga-text-akun">
-    <p>
-      Kata sandi Anda sudah diatur ulang, sehingga Anda bisa melakukan <a href="{% url 'loglan:login' %}">Masuk</a> kembali.
-    </p>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12" style="margin-top:50px;">
+      <div class="text-center yoga-text-akun" style="padding:10px;">
+        <p>Kata sandi Anda sudah diatur ulang, sehingga Anda bisa melakukan <a href="{% url 'loglan:login' %}">Masuk</a> kembali.</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 </div>
+
 {% endblock %}
