--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,17 +1,19 @@
 {% extends 'loglan/header_footer.html' %}
 
 {% block content %}
-<div class="container yoga-background-akun">
+<div class="container-fluid" style="padding-top:25px; padding-bottom: 25px;">
   <div class="row">
-    <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
 
-    <div class="col-md-4 text-center">
-      <div style="margin-top:85px;">
-        <h3 style="color:white; margin-bottom:30px;">Lupa Kata Sandi</h3>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12 text-center">
+      <div style="margin-top:50px;">
+        <div class="text-center">
+          <h4 class="yoga-keterangan-masuk">Lupa Kata Sandi</h4>
+        </div>
         <div class="panel panel-default yoga-panel">
           <div class="panel-body">
             <form method="POST">
-              <div>
+              <div class="form-group">
                 {% for field in form %}{% csrf_token %}
                 <div class="text-left" style="margin-top: 20px; color:white;">
                   {{ field.label_tag|escape }}
@@ -28,7 +30,7 @@
       </div>
     </div>
 
-    <div class="col-md-4"></div>
+    <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12"></div>
   </div>
 </div>
 {% endblock %}
